--- a/index.html
+++ b/index.html
@@ -177,27 +177,21 @@ MathJax.Hub.Config({
                     type="video/mp4">
           </video>
         </div>
-        <div class="item item-CUHK UPPER">
-          <video poster="" id="CUHK UPPER" autoplay controls muted loop playsinline height="100%">
-            <source src=".upper(1).mp4"
+        <div class="item item-CUHK upper">
+          <video poster="" id="CUHK upper" autoplay controls muted loop playsinline height="100%">
+            <source src="upper(1).mp4"
                     type="video/mp4">
           </video>
         </div>
-        <div class="item item-campus">
-          <video poster="" id="campus" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/VastGaussian_Campus.mp4"
+        <div class="item item-lfls">
+          <video poster="" id="lfls" autoplay controls muted loop playsinline height="100%">
+            <source src="lfls"
                     type="video/mp4">
           </video>
         </div>
-        <div class="item item-sciart">
-          <video poster="" id="sciart" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/VastGaussian_Sci-Art.mp4"
-                    type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-residence">
-          <video poster="" id="residence" autoplay controls muted loop playsinline>
-            <source src="./static/videos/VastGaussian_Residence.mp4"
+        <div class="item item-hospital">
+          <video poster="" id="hospital" autoplay controls muted loop playsinline height="100%">
+            <source src="./ours_hospital"
                     type="video/mp4">
           </video>
         </div>
