--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@ MathJax.Hub.Config({
   </div>
 </section>
 
-<div style="text-align: center;">
+<!-- <div style="text-align: center;">
   <iframe width="1260" height="720" src="https://www.youtube.com/embed/TEEtA6rnCTE" frameborder="0" allowfullscreen></iframe>
-</div>
+</div> -->
 
 
 
