--- a/index.html
+++ b/index.html
@@ -185,13 +185,13 @@ MathJax.Hub.Config({
         </div>
         <div class="item item-lfls">
           <video poster="" id="lfls" autoplay controls muted loop playsinline height="100%">
-            <source src="lfls"
+            <source src="lfls.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-hospital">
           <video poster="" id="hospital" autoplay controls muted loop playsinline height="100%">
-            <source src="./ours_hospital"
+            <source src="./ours_hospital.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -244,7 +244,7 @@ MathJax.Hub.Config({
   .image-container img {
     max-width: 100%; 
     height: auto; 
-    width: 700px; 
+    width: 400px; 
   }
 </style>
 
