--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ MathJax.Hub.Config({
   <div class="img-compare-row">
       <div id="img_comp_21" class="bal-container-small">
           <div class="bal-after">
-              <img src="images/ours_sziit_mesh.png">
+              <img src="images/ours_lfls_mesh.png">
               <div class="bal-afterPosition afterLabel" style="z-index:1;">
                   Ours
               </div>
@@ -349,7 +349,7 @@ MathJax.Hub.Config({
 
           <div class="bal-before" >
               <div class="bal-before-inset"  >
-                  <img src="images/gof_sziit_mesh.png">
+                  <img src="images/gof_lfls_mesh.png">
                   <div class="bal-beforePosition beforeLabel">
                       GOF
                   </div>
