--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@ MathJax.Hub.Config({
         <h2 class="title is-3">Abstract</h2>
       </div>
     </div>
+    <img src="images/teaser2.png" alt="Image 1">
     <div class="content has-text-justified">
       <p>
         While Gaussian Splatting (GS) demonstrate efficient and high-quality scene rendering and surface extraction, they fall short in handling large-scale surface extraction. To overcome this, we present ULSR-GS, a framework dedicated to high-fidelity surface extraction in ultra-large-scale scenes, addressing the limitations of existing GS-based mesh extraction methods.  Specifically, we propose a point-to-photo partitioning approach combined with a multi-view optimal view matching principle to select the best training images for each sub-region. Additionally, during training, ULSR-GS employs a densification strategy based on multi-view geometric consistency to enhance rendering and surface extraction details. Experimental results demonstrate that ULSR-GS outperforms other state-of-the-art GS-based works on large-scale benchmark datasets, significantly improving both rendering quality and surface extraction accuracy in complex urban environments.
@@ -247,7 +248,7 @@ MathJax.Hub.Config({
 <section class="section">
   <div class="columns is-centered has-text-centered">
     <div class="column is-three-fifths">
-      <h2 class="title is-3">Comparison With SOTA</h2>
+      <h2 class="title is-3">Comparison With GS-based SOTA</h2>
       <img src="images/full_scene.png" alt="Image 1">
     </div>
   </div>
