add videos and images

--- a/index1.html
+++ b/index1.html
@@ -64,20 +64,26 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <ul class="list-inline">
-<!--                     <li>
+                    <li>
                         Zhuoxiao Li</a><sup>1</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;
                     </li>
                     <li>
-                       Yijie Chu</a><sup>2,3</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;
+                        Shanliang Yao</a><sup>1,2</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;
+                    </li>
+                    <li>
+                        Qizhong Gao</a><sup>1,2</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;
                     </li>
                     <li>
                        Yong Yue </a><sup>2,3</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;
                     </li>
                     <li>
+                        Angel F. Garc  ´ıa-Fernandez </a><sup>2,3</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;
+                     </li>
+                    <li>
                        Xiaohui Zhu</a><sup>2,3</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;
                     </li>
                     <li>
-                       Shanliang Yao</a><sup>1</sup> -->
+                       </a><sup>1</sup>
                     </li>
                 </ul>
             </div>
@@ -86,9 +92,9 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <ul class="list-inline">
-<!--                     <li><sup>1</sup>University of Liverpool</span>&nbsp;&nbsp;&nbsp;&nbsp;</li>
+                    <li><sup>1</sup>University of Liverpool</span>&nbsp;&nbsp;&nbsp;&nbsp;</li>
                     <li><sup>2</sup>Xi'an Jiaotong-Liverpool University</span>&nbsp;&nbsp;&nbsp;&nbsp;</li>
-                    <li><sup>3</sup>ARIES Research Centre, Universidad Antonio de Nebrija</span>&nbsp;&nbsp;&nbsp;&nbsp;</li> -->
+                    <li><sup>3</sup>ARIES Research Centre, Universidad Antonio de Nebrija</span>&nbsp;&nbsp;&nbsp;&nbsp;</li>
                 </ul>
             </div>
         </div>
