update arxiv links

--- a/index.html
+++ b/index.html
@@ -92,21 +92,21 @@ MathJax.Hub.Config({
             <span class="author-block", style="font-size: 15px;color:#726f6f"><sup>†&nbsp;</sup>Corresponding author </span>
           </div>
           <!-- <div class="is-size-5 publication-authors">
-            <span class="author-block", style="color:#367DBD";>CVPR 2024</span>
+            <span class="author-block", style="color:#367DBD";>CVPR 2025</span>
           </div>  -->
 
-          <!-- <div class="column has-text-centered">
+          <div class="column has-text-centered">
             <div class="publication-links">
                <span class="link-block">
-                <a href="https://arxiv.org/abs/2402.17427"
+                <a href="https://arxiv.org/abs/2412.01402"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
                   <span>Paper</span>
                 </a>
-              </span> -->
-              <!-- <span class="link-block">
+              </span>
+              <span class="link-block">
                 <a href="https://arxiv.org/abs/2402.17427"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -114,8 +114,8 @@ MathJax.Hub.Config({
                   </span>
                   <span>arXiv</span>
                 </a>
-              </span> -->
-              <!-- <span class="link-block">
+              </span>
+              <span class="link-block">
                 <a href="#"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -123,9 +123,9 @@ MathJax.Hub.Config({
                   </span>
                   <span>Code (Soon)</span>
                   </a>
-              </span> -->
+              </span>
               <!-- <span class="link-block">
-                <a href="https://cloud.tsinghua.edu.cn/d/1abb3fbd571247919d90/"
+                <a href=""
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-paperclip"></i>
@@ -134,14 +134,14 @@ MathJax.Hub.Config({
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://cloud.tsinghua.edu.cn/d/210a5b0a6f284965aaaa/"
+                <a href=""
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
                   </span>
                   <span>Datasets</span>
-                  </a>
-            </div> -->
+                  </a> -->
+            </div>
           </div>
         </div>
       </div>
@@ -526,12 +526,16 @@ MathJax.Hub.Config({
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@inproceedings{ULSRGS,
-  title     = {ULSR-GS},
-  author    = {},
-  booktitle = {},
-  year      = {2024}
-}</code></pre>
+    <pre><code>@misc{li2024ulsrgsultralargescalesurface,
+      title={ULSR-GS: Ultra Large-scale Surface Reconstruction Gaussian Splatting with Multi-View Geometric Consistency}, 
+      author={Zhuoxiao Li and Shanliang Yao and Qizhong Gao and Angel F. Garcia-Fernandez and Yong Yue and Xiaohui Zhu},
+      year={2024},
+      eprint={2412.01402},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2412.01402}, 
+}
+</code></pre>
   </div>
 </section>
 
