--- a/index.html
+++ b/index.html
@@ -550,6 +550,8 @@ MathJax.Hub.Config({
           <p>
             We thank the authors of <a
             href="https://github.com/nerfies/nerfies.github.io">Nerfies</a> that kindly open sourced the template of this website.
+            The html script of image comparison is borrowed from <a
+            href="https://repo-sam.inria.fr/fungraph/3d-gaussian-splatting/">3D Gaussian Splatting</a>.
             The html script of video comparison is borrowed from <a
             href="https://dorverbin.github.io/refnerf/">Ref-NeRF</a> and <a
             href="https://vastigausian.github.io">VastGaussian</a>.
