update retained scene

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ MathJax.Hub.Config({
 
         <div class="item item-campus">
           <video poster="" id="campus" autoplay controls muted loop playsinline height="100%">
-            <source src="./video/ours_camp_mesh0001-2900.mp4"
+            <source src="./video/camp1.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -209,6 +209,10 @@ MathJax.Hub.Config({
         </div>
         
       </div>
+      <p>
+      (Retrained and  re-rendered UrbanScene 3D Dataset Campus scene. Improved architectural details and road smoothing. However, the water surface remains uneven and some architectural integrity has been lost. We hope to improve this situation before the code is released.)
+    
+      </p>
     </div>
   </div>
 </div>
