add matrix city demo

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@ MathJax.Hub.Config({
   <div class="columns is-centered has-text-centered">
     <div class="column is-three-fifths">
       <div id="results-carousel" class="carousel results-carousel">
+        
 
         <div class="item item-upper">
           <video poster="" id="upper" autoplay controls muted loop playsinline height="100%">
@@ -237,7 +238,7 @@ MathJax.Hub.Config({
   <section class="section">
     <div class="columns is-centered has-text-centered">
       <div class="column is-three-fifths">
-        <h2 class="title is-3">Partition Example</h2>
+        <h2 class="title is-3">Partition Example </h2>
         <img src="images/partition.png" alt="partition">
         <video poster="" id="artsci" autoplay controls muted loop playsinline height="50%">
           <source src="video/Artsci_block_1.mp4"
@@ -245,7 +246,7 @@ MathJax.Hub.Config({
         </video>
       </div>
     </div>
-  </div>
+  
 
   <section class="section">
     <div class="columns is-centered has-text-centered">
@@ -260,6 +261,17 @@ MathJax.Hub.Config({
     </div>
   </div>
 
+<section class="section">
+  <div class="columns is-centered has-text-centered">
+    <div class="column is-three-fifths">
+      <h2 class="title is-3">Virtual Larg-Scale Scene (Matrix City Small City) </h2>
+      <img src="images/martix.png" alt="partition">
+      <video poster="" id="artsci" autoplay controls muted loop playsinline height="50%">
+        <source src="video/aerial.mp4"
+                type="video/mp4">
+      </video>
+    </div>
+  </div>
 
 <section class="section">
   <div class="columns is-centered has-text-centered">
