--- a/index.html
+++ b/index.html
@@ -158,6 +158,12 @@ MathJax.Hub.Config({
     <div class="column is-three-fifths">
       <div id="results-carousel" class="carousel results-carousel">
         
+        <div class="item item-hkustgz">
+          <video poster="" id="hkustgz" autoplay controls muted loop playsinline height="100%">
+            <source src="./video/hkustgz1.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
 
         <div class="item item-upper">
           <video poster="" id="upper" autoplay controls muted loop playsinline height="100%">
